<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="tituloapp">App Fitness</string>
    <string name="titulomenu">MENU</string>
    <string name="vtnimc">Calcular IMC</string>
    <string name="vtnconversor">Conversor</string>
    <string name="vtnsair">SAIR</string>
    <string name="tituloimc">Calculadora IMC</string>
    <string name="ctxpeso">Insira o seu peso</string>
    <string name="ctxaltura">Insira a sua altura</string>
    <string name="btnvoltar">Voltar ao Menu</string>
    <string name="btnimc">Calcular IMC</string>
    <string name="btnvoltarimc">Voltar ao MENU</string>
    <string name="txtconversor">Conversor de Litros</string>
    <string name="btnconvertecolher">Converter litro para colheres de sopa</string>
    <string name="btnconvcolher">Litros para colheres de sopa</string>
    <string name="btnmililitros">"Litros para mililitros "</string>
    <string name="btngalao">Litros para galão</string>
    <string name="ctxmili">Litros para ml</string>
    <string name="ctxonca">Litros para fl. Oz</string>
    <string name="ctxlitros">Insira valor de litros</string>
</resources>