<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Conversor">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="352dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtconversor"
        android:textAlignment="center"
        android:textSize="16pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGalao"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="btnConGAL"
        android:text="@string/btngalao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctxLitro" />

    <Button
        android:id="@+id/btnMili"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="btnConvMl"
        android:text="@string/ctxmili"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGalao" />

    <Button
        android:id="@+id/btnOnca"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="btnConvFLOZ"
        android:text="@string/ctxonca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMili" />

    <EditText
        android:id="@+id/ctxLitro"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/ctxlitros"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtConversao"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOnca" />

    <Button
        android:id="@+id/button4"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="voltar"
        android:text="@string/btnvoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConversao" />
</androidx.constraintlayout.widget.ConstraintLayout>