<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="341dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulomenu"
        android:textAlignment="center"
        android:textSize="16pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="vaiParaCalculoIMC"
        android:text="@string/vtnimc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnConversor"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="vaiParaConversor"
        android:text="@string/vtnconversor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/vtnsair"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConversor" />
</androidx.constraintlayout.widget.ConstraintLayout>