<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculoIMC">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/tituloimc"
        android:textAlignment="center"
        android:textSize="16pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ctxPeso"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/ctxpeso"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/ctxAltura"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/ctxaltura"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctxPeso" />

    <Button
        android:id="@+id/btnCalculoIMC"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="btnCalculaIMC"
        android:text="@string/btnimc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctxAltura" />

    <TextView
        android:id="@+id/txtIMC"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculoIMC" />

    <TextView
        android:id="@+id/txtMensagem"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIMC" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="voltarimc"
        android:text="@string/btnvoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMensagem" />

</androidx.constraintlayout.widget.ConstraintLayout>